# voxelar

./: Cargo.toml  README.md  run_example.sh
.cargo/: config.toml
examples/billboards/: Cargo.toml
examples/billboards/shader/: billboard.frag  billboard.vert  triangle.frag  triangle.vert
examples/billboards/src/: demo.rs  main.rs  vertex.rs
examples/textured-quad/: Cargo.toml
examples/textured-quad/shader/: triangle.frag  triangle.vert
examples/textured-quad/src/: demo.rs  main.rs
examples/voxel-test/: Cargo.toml  recompile_shaders.rs
examples/voxel-test/shader/: .gitignore  ray_box_intersection.frag  ray_box_intersection.vert
examples/voxel-test/shader/intersect/: box.glsl  intersect.glsl  quadric_proj.glsl  ray.glsl
examples/voxel-test/src/: demo.rs  vertex.rs
examples/voxelar-demo/: Cargo.toml
examples/voxelar-demo/resources/: frag.glsl  vert.glsl
examples/voxelar-demo/shader/: triangle.frag  triangle.vert
examples/voxelar-demo/src/: demo.rs  main.rs  triangle.rs  vertex.rs
src/: gl_context.rs  lib.rs  receivable_events.rs  render_context.rs  result.rs  window.rs  window_events.rs
src/engine/: frame_time.rs  mod.rs  time.rs
src/engine/camera/: mod.rs  orbital_camera.rs
src/opengl/: mesh.rs  mod.rs  program.rs  shader.rs  uniform.rs  vao.rs  vbo.rs
src/voxel/: mod.rs  voxel_grid.rs  voxel_storage.rs
src/vulkan/: aligned_buffer.rs  allocator.rs  buffer.rs  command.rs  command_buffer.rs  command_pool.rs  creation_info.rs  debug.rs  dedicated_pool_allocator.rs  depth_image.rs  descriptor_pool.rs  descriptor_pool_builder.rs  descriptor_set.rs  descriptor_set_layout.rs  descriptor_set_layout_builder.rs  descriptor_set_logic.rs  descriptor_set_logic_builder.rs  descriptor_set_update_builder.rs  dynamic_descriptor_buffer.rs  egui_integration.rs  frame_data.rs  framebuffers.rs  graphics_pipeline_builder.rs  image.rs  image_view.rs  logical_device.rs  memory_range.rs  mod.rs  naive_allocator.rs  per_frame.rs  per_frame_data.rs  physical_device.rs  pipeline_layout.rs  pipeline_layout_builder.rs  present_images.rs  render_pass.rs  sampler.rs  shader.rs  staging_buffer.rs  storage_buffer.rs  (+10 more)
src/vulkan/buffers/: aligned_buffer.rs  buffer.rs  mod.rs  staging_buffer.rs  storage_buffer.rs  typed_buffer.rs  uniform_buffer.rs
src/vulkan/command/: command_buffer.rs  command_pool.rs  mod.rs
src/vulkan/descriptors/: descriptor_set_layout.rs  descriptor_set_layout_builder.rs  descriptor_set_logic.rs  descriptor_set_logic_builder.rs  descriptor_set_update_builder.rs  mod.rs
src/vulkan/experimental/: dedicated_pool_allocator.rs  mod.rs  naive_allocator.rs
src/vulkan/image/: image.rs  image_view.rs  mod.rs  sampler.rs  texture.rs  typed_image.rs
voxelar-math/: Cargo.toml
voxelar-math/src/: error.rs  identity.rs  lib.rs  mat2.rs  mat3.rs  mat4.rs  mat_macros.rs  matrix.rs  matrix_identity.rs  matrix_transform.rs  matrix_types.rs  quaternion.rs  vec.rs  vec2.rs  vec3.rs  vec4.rs  vec_macro.rs
voxelar-utils/src/: as_any_trait.rs  keep_alive.rs
voxelar-vertex/: Cargo.toml
voxelar-vertex-derive/src/: lib.rs  util.rs
voxelar-vertex/src/: input_state_builder.rs  lib.rs
