[package]
name = "voxelar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
allocator-debug-logs = []

[dependencies]
winit = "0.28.6"
raw-window-handle = "0.5.2"

ash = "0.37.3"
ash-window = "0.12.0"
gpu-allocator = { version = "0.22.0", default-features = false, features = ["ash", "vulkan"] }
shaderc = "0.8.2"

nalgebra = "0.32.3"

paste = "1.0.13"
lazy_static = "1.4.0"
voxelar-utils = { version = "0.1.0", path = "voxelar-utils" }

[dev-dependencies]
rstest = "0.18.1"
