[package]
name = "billboards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxelar = { path = "../../.", features = ["shaderc-crate"] }
voxelar-vertex = { git = "https://github.com/jarvarvarvis/voxelar-vertex" }
