[package]
name = "voxelar-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxelar = { path = "../../.", features = ["allocator-debug-logs"] }
voxelar-vertex = { path = "../../voxelar-vertex" }
